name:                api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  blueprint.html
                   , blueprint.apib 
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api.Server
                     , Api.Database
                     , Api.Config
                     , Api.Environment
                     , Api.Types.Web
                     , Api.Types.Post
  build-depends:       base >= 4.7 && < 5
                     , postgresql-simple
                     , scotty
                     , network
                     , aeson
                     , mtl
                     , containers
                     , time
                     , bytestring
                     , text
                     , warp
                     , wai
                     , wai-cors
                     , http-types
                     , wai-extra
                     , transformers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DeriveDataTypeable

executable api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , api
  default-language:    Haskell2010

test-suite api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/api
